# apod-color-search

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: batch-process.yml  deploy-api.yml  deploy-web.yml  hide-apod.yml  process.yml
api/: README.md  fresh.gen.ts  import_map.json  main.ts
api/routes/: _middleware.ts  index.tsx  types.ts  utils.ts
api/routes/search/: [hex].ts
assets/: index.074e72a8.js  index.16872156.js  index.1ccfed37.js  index.1eea4c27.css  index.22498384.js  index.3312abb4.css  index.34ed8b03.js  index.3a187235.js  index.3d4bb0f1.css  index.4d77b447.js  index.4e7ef8d5.css  index.5cd354d8.js  index.5e135837.css  index.60e3141b.js  index.649fb236.css  index.64f903da.js  index.64fb90a0.js  index.65232025.css  index.6644ed15.css  index.683d3854.css  index.6fcca0ba.js  index.805342d5.css  index.8e74fb5f.js  index.9069913f.css  index.91169e5f.css  index.990fd64b.js  index.996f6481.js  index.9d2e3e86.js  index.a3761d10.css  index.a94b1cc6.js  index.a9a6a443.css  index.aa5d4f66.js  index.afe67578.js  index.bae265b6.js  index.c1321513.js  index.cb6db702.js  index.cc71535b.css  index.d2577deb.css  index.d8cc0a86.js  index.e4c786ac.js  (+3 more)
cache/: Dockerfile  README.md  fly.toml  package-lock.json  package.json  server.js
src/: api.rs  image_utils.rs  lib.rs  main.rs
tests/: image_utils_test.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  app.css  lazy-load.js
