[package]
name = "apod-color-search"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
postgrest = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
image = "0.24.3"
bytes = "1.2.1"
colorsys = "0.6.6"
hex = "0.4.3"
howlong = "0.1"
chrono = "0.4.22"